@@ -214,6 +214,8 @@ public class ChoosenListActivity extends Activity implements OnRefreshListener {
                     e.printStackTrace();
 
                 }
+
+                mPullToRefreshLayout.setRefreshComplete();
             }
         }).start();
     }
