@@ -5,6 +5,8 @@
     &#8226; Hopefully fixed the timelines sometimes just not updating<br/>
     &#8226; Small style change on the tweet viewer<br/>
     &#8226; Some swipe to dismiss interactions list update<br/>
+    &#8226; Fixed some non-translated text<br/>
+    &#8226; Hopefully fixed the profile picture in the drawer sometimes changing<br/>
 </br><br/>
 
 <b>Version 2.0.0 Beta 2:</b><br/><br/>
